Bug 871064: _PR_InitThreads() should not call PR_SetThreadPriority(). Assert that we only pass priority=PR_PRIORITY_NORMAL to _PR_InitThreads(). r=gsvelto.